adds option to silence for 24h

--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -32,6 +32,9 @@
 {{ define "slack.sapcc.acknowledge.actionText" }}{{ if eq .Status "firing" }}Acknowledge{{ end }}{{ end }}
 {{ define "slack.sapcc.acknowledge.actionValue" }}{{ if eq .Status "firing" }}acknowledge{{ end }}{{ end }}
 
+{{ define "slack.sapcc.silence1Day.actionText" }}{{ if eq .Status "firing" }}Silence for 1 day{{ end }}{{ end }}
+{{ define "slack.sapcc.silence1Day.actionValue" }}{{ if eq .Status "firing" }}silence1Day{{ end }}{{ end }}
+
 {{ define "slack.sapcc.silenceUntilMonday.actionText" }}{{ if eq .Status "firing" }}Silence until monday{{ end }}{{ end }}
 {{ define "slack.sapcc.silenceUntilMonday.actionValue" }}{{ if eq .Status "firing" }}silenceUntilMonday{{ end }}{{ end }}
 
