use .GroupLabels.alertname

--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -24,7 +24,7 @@
 {{ if .CommonLabels.dashboard }}*<https://grafana.{{ .CommonLabels.region }}.cloud.sap/dashboard/db/{{ .CommonLabels.dashboard }}|Grafana>* {{ end -}}
 {{ if .CommonLabels.playbook }}*<https://operations.global.cloud.sap/{{ .CommonLabels.playbook }}|Playbook>* {{ end -}}
 {{ if .CommonLabels.kibana }}*<https://logs.{{ .CommonLabels.region }}.cloud.sap/{{ .CommonLabels.kibana }}|Kibana>* {{ end -}}
-*<https://prometheus.{{- if eq .CommonLabels.tier "kks" -}}kubernikus.{{- end -}}{{ .CommonLabels.region }}.cloud.sap{{- if .CommonLabels.Alertname }}/graph?g0.range_input=1h&g0.expr=ALERTS%7Balertname%3D%22{{ .CommonLabels.Alertname }}%22%7D&g0.tab=0{{ end -}}|Prometheus>*
+*<https://prometheus.{{- if eq .CommonLabels.tier "kks" -}}kubernikus.{{- end -}}{{ .CommonLabels.region }}.cloud.sap/graph?g0.range_input=1h&g0.expr=ALERTS%7Balertname%3D%22{{ .GroupLabels.alertname }}%22%7D&g0.tab=0|Prometheus>*
 {{ end }}
 
 {{ define "slack.sapcc.actionName" }}{{ if eq .Status "firing" }}reaction{{ end }}{{ end }}
