Change from component to device name && add a Create SPC Ticket Link
Component hast the ‘snmp_exporter’ in its name - devicename is correct.
NetworkAsrNatTableIsNearlyFull got an SPC Ticket Create Link as PoC.

--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -25,6 +25,7 @@
 {{ if .CommonLabels.dashboard }}*<https://grafana.{{ .CommonLabels.region }}.cloud.sap/dashboard/db/{{ .CommonLabels.dashboard }}|Grafana>* {{ end -}}
 {{ if .CommonLabels.playbook }}*<https://operations.global.cloud.sap/{{ .CommonLabels.playbook }}|Playbook>* {{ end -}}
 {{ if .CommonLabels.kibana }}*<https://logs.{{ .CommonLabels.region }}.cloud.sap/{{ .CommonLabels.kibana }}|Kibana>* {{ end -}}
+{{ if .CommonLabels.spc }}*<https://spc.ondemand.com/ticket_create|Create Ticket>* {{ end -}}
 *<{{ $generatorURL }}|Prometheus>*
 {{ end }}
 
