--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -25,7 +25,7 @@
 {{ if .CommonLabels.dashboard }}*<https://grafanasix.{{ .CommonLabels.region }}.cloud.sap/d/{{ .CommonLabels.dashboard }}|Grafana>* {{ end -}}
 {{ if .CommonLabels.playbook }}*<https://operations.global.cloud.sap/{{ .CommonLabels.playbook }}|Playbook>* {{ end -}}
 {{ if .CommonLabels.kibana }}*<https://logs.{{ .CommonLabels.region }}.cloud.sap/{{ .CommonLabels.kibana }}|Kibana>* {{ end -}}
-{{ if .CommonLabels.spc }}*<https://spc.ondemand.com/ticket_create/?{{ .CommonLabels.spc }}|CreateTicket>* {{ end -}}
+{{ if .CommonLabels.spc }}*<https://spc.ondemand.com/ticket_create/?{{ .CommonLabels.spc }}|Create-SPC-Ticket>* {{ end -}}
 *<{{ $generatorURL }}|Prometheus>*
 {{ end }}
 
@@ -40,6 +40,3 @@
 
 {{ define "slack.sapcc.silenceUntilMonday.actionText" }}{{ if eq .Status "firing" }}Silence until monday{{ end }}{{ end }}
 {{ define "slack.sapcc.silenceUntilMonday.actionValue" }}{{ if eq .Status "firing" }}silenceUntilMonday{{ end }}{{ end }}
-
-{{ define "slack.sapcc.silence1Month.actionText" }}{{ if eq .Status "firing" }}Silence for 1 month{{ end }}{{ end }}
-{{ define "slack.sapcc.silence1Month.actionValue" }}{{ if eq .Status "firing" }}silence1Month{{ end }}{{ end }}
