[alertmanager] prepare grafanasix rollout
grafana six shall get the orig. grafana dns entry

--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -22,7 +22,7 @@
 {{- if not $generatorURL }}{{ $generatorURL = .GeneratorURL }}{{ end }}
 {{ end -}}
 
-{{ if .CommonLabels.dashboard }}*<https://grafanasix.{{ .CommonLabels.region }}.cloud.sap/d/{{ .CommonLabels.dashboard }}|Grafana>* {{ end -}}
+{{ if .CommonLabels.dashboard }}*<https://grafana.{{ .CommonLabels.region }}.cloud.sap/dashboard/db/{{ .CommonLabels.dashboard }}|Grafana>* {{ end -}}
 {{ if .CommonLabels.playbook }}*<https://operations.global.cloud.sap/{{ .CommonLabels.playbook }}|Playbook>* {{ end -}}
 {{ if .CommonLabels.kibana }}*<https://logs.{{ .CommonLabels.region }}.cloud.sap/{{ .CommonLabels.kibana }}|Kibana>* {{ end -}}
 {{ if .CommonLabels.spc }}*<https://spc.ondemand.com/ticket_create/?{{ .CommonLabels.spc }}|Create-SPC-Ticket>* {{ end -}}
