added AWX button to slack template

--- a/global/prometheus-alertmanager/slack.tmpl
+++ b/global/prometheus-alertmanager/slack.tmpl
@@ -26,6 +26,7 @@
 {{ if .CommonLabels.playbook }}*<https://operations.global.cloud.sap/{{ .CommonLabels.playbook }}|Playbook>* {{ end -}}
 {{ if .CommonLabels.kibana }}*<https://logs.{{ .CommonLabels.region }}.cloud.sap/{{ .CommonLabels.kibana }}|Kibana>* {{ end -}}
 {{ if .CommonLabels.spc }}*<https://spc.ondemand.com/ticket_create/?{{ .CommonLabels.spc }}|Create-SPC-Ticket>* {{ end -}}
+{{ if .CommonLabels.awx }}*<https://awx.global.cloud.sap/{{ .CommonLabels.awx }}|AWX>* {{ end -}}
 *<{{ $generatorURL }}|Prometheus>*
 {{ end }}
 
