include alert fingerprint in pagerduty template

--- a/common/prometheus-alertmanager/notification-templates/pagerduty.tmpl
+++ b/common/prometheus-alertmanager/notification-templates/pagerduty.tmpl
@@ -23,6 +23,12 @@
 {{ end -}}
 {{ end }}
 
+{{ define "pagerduty.sapcc.fingerprint" }}
+{{ range .Alerts -}}
+    {{ .Fingerprint }}
+{{ end -}}
+{{ end }}
+
 {{ define "pagerduty.sapcc.prometheus" }}
 {{ range .Alerts.Firing -}}
   {{ .GeneratorURL }}
